{
  "version": 4,
  "terraform_version": "1.1.5",
  "serial": 321,
  "lineage": "aa60614b-a38c-bde7-1546-5ed13acb102e",
  "resources": [
    {
      "module": "module.aurora-serverless",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:959472223161:security-group/sg-0b1e2b46767174149",
            "description": "Control in/out Traffic RDS Aurora amiblocked-api-db-pgsql",
            "egress": [],
            "id": "sg-0b1e2b46767174149",
            "ingress": [],
            "name": "amiblocked-api-db-pgsql-20220216120519781700000001",
            "name_prefix": "amiblocked-api-db-pgsql-",
            "owner_id": "959472223161",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "amiblocked-api-db-pgsql"
            },
            "tags_all": {
              "Name": "amiblocked-api-db-pgsql"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d64d6000a8877c0c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.current",
            "module.aurora-serverless.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.aurora-serverless.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:959472223161:route-table/rtb-06b51dad84b1d2ef5",
            "id": "rtb-06b51dad84b1d2ef5",
            "owner_id": "959472223161",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "amiblocked-api-db-pgsql-vpc-private-us-east-1a"
            },
            "tags_all": {
              "Name": "amiblocked-api-db-pgsql-vpc-private-us-east-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d64d6000a8877c0c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.current",
            "module.aurora-serverless.module.vpc.aws_vpc.this",
            "module.aurora-serverless.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:959472223161:route-table/rtb-03662ac8cdf67a645",
            "id": "rtb-03662ac8cdf67a645",
            "owner_id": "959472223161",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "amiblocked-api-db-pgsql-vpc-private-us-east-1b"
            },
            "tags_all": {
              "Name": "amiblocked-api-db-pgsql-vpc-private-us-east-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d64d6000a8877c0c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.current",
            "module.aurora-serverless.module.vpc.aws_vpc.this",
            "module.aurora-serverless.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:959472223161:route-table/rtb-0b8062081462b2de9",
            "id": "rtb-0b8062081462b2de9",
            "owner_id": "959472223161",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "amiblocked-api-db-pgsql-vpc-private-us-east-1c"
            },
            "tags_all": {
              "Name": "amiblocked-api-db-pgsql-vpc-private-us-east-1c"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d64d6000a8877c0c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.current",
            "module.aurora-serverless.module.vpc.aws_vpc.this",
            "module.aurora-serverless.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aurora-serverless.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-094be76b8d852ea37",
            "route_table_id": "rtb-06b51dad84b1d2ef5",
            "subnet_id": "subnet-02694636512d88086"
          },
          "dependencies": [
            "data.aws_availability_zones.current",
            "module.aurora-serverless.module.vpc.aws_route_table.database",
            "module.aurora-serverless.module.vpc.aws_route_table.private",
            "module.aurora-serverless.module.vpc.aws_subnet.database",
            "module.aurora-serverless.module.vpc.aws_vpc.this",
            "module.aurora-serverless.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-066817d555eab5d3e",
            "route_table_id": "rtb-03662ac8cdf67a645",
            "subnet_id": "subnet-0e9cd7cdd498a1ca2"
          },
          "dependencies": [
            "data.aws_availability_zones.current",
            "module.aurora-serverless.module.vpc.aws_route_table.database",
            "module.aurora-serverless.module.vpc.aws_route_table.private",
            "module.aurora-serverless.module.vpc.aws_subnet.database",
            "module.aurora-serverless.module.vpc.aws_vpc.this",
            "module.aurora-serverless.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cd2471a74cda1a8d",
            "route_table_id": "rtb-0b8062081462b2de9",
            "subnet_id": "subnet-0d2f7d752d97e5dd1"
          },
          "dependencies": [
            "data.aws_availability_zones.current",
            "module.aurora-serverless.module.vpc.aws_route_table.database",
            "module.aurora-serverless.module.vpc.aws_route_table.private",
            "module.aurora-serverless.module.vpc.aws_subnet.database",
            "module.aurora-serverless.module.vpc.aws_vpc.this",
            "module.aurora-serverless.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aurora-serverless.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:959472223161:subnet/subnet-02694636512d88086",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02694636512d88086",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "959472223161",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "amiblocked-api-db-pgsql-vpc-db-us-east-1a"
            },
            "tags_all": {
              "Name": "amiblocked-api-db-pgsql-vpc-db-us-east-1a"
            },
            "vpc_id": "vpc-0d64d6000a8877c0c"
          },
          "dependencies": [
            "data.aws_availability_zones.current",
            "module.aurora-serverless.module.vpc.aws_vpc.this",
            "module.aurora-serverless.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:959472223161:subnet/subnet-0e9cd7cdd498a1ca2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e9cd7cdd498a1ca2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "959472223161",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "amiblocked-api-db-pgsql-vpc-db-us-east-1b"
            },
            "tags_all": {
              "Name": "amiblocked-api-db-pgsql-vpc-db-us-east-1b"
            },
            "vpc_id": "vpc-0d64d6000a8877c0c"
          },
          "dependencies": [
            "data.aws_availability_zones.current",
            "module.aurora-serverless.module.vpc.aws_vpc.this",
            "module.aurora-serverless.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:959472223161:subnet/subnet-0d2f7d752d97e5dd1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d2f7d752d97e5dd1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "959472223161",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "amiblocked-api-db-pgsql-vpc-db-us-east-1c"
            },
            "tags_all": {
              "Name": "amiblocked-api-db-pgsql-vpc-db-us-east-1c"
            },
            "vpc_id": "vpc-0d64d6000a8877c0c"
          },
          "dependencies": [
            "data.aws_availability_zones.current",
            "module.aurora-serverless.module.vpc.aws_vpc.this",
            "module.aurora-serverless.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aurora-serverless.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:959472223161:vpc/vpc-0d64d6000a8877c0c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-099dc5d53bbe1bff2",
            "default_route_table_id": "rtb-00d0666d11fafcbbd",
            "default_security_group_id": "sg-09ae47417434c81a9",
            "dhcp_options_id": "dopt-0deafc2d823581f66",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0d64d6000a8877c0c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00d0666d11fafcbbd",
            "owner_id": "959472223161",
            "tags": {
              "Name": "amiblocked-api-db-pgsql-vpc"
            },
            "tags_all": {
              "Name": "amiblocked-api-db-pgsql-vpc"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.current"
          ]
        }
      ]
    }
  ]
}